ajoouter les modfication pour la 2 ieme fois